--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,6 +11,43 @@
 
 
 {  
+name:"Alarum คู่เดือดโคตรคนระห่ำ (2025)",
+image:"https://img.fw4free.com/postor/20250719113813ckyYZf5cGTSOwF8LWIRqeThyh18.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Alarum_2025/Alarum_2025_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},  
+
+
+
+
+
+
+
+
+
+
+  
+{  
+name:"Jurassic World Rebirth จูราสสิค เวิลด์: กำเนิดชีวิตใหม่ (2025)",
+image:"https://img.fw4free.com/postor/20250703093404skSoZMossoIYvzOf2UnaWqLscJl.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Jurassic_World_Rebirth_2025/Jurassic_World_Rebirth_2025_thr_v2.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},  
+
+
+
+
+
+
+
+
+
+  
+{  
 name:"คู่สืบ​ คู่อันตราย (2025) NETFLIX",
 image:"https://img.fw4free.com/postor/20250711150853v3aq0JZIjXr8okdnBR7yzn9kcbd.jpg",
 url:"https://m1free.inwstream.com:1936/movie4/Almost_Cops_2025/Almost_Cops_2025_TH_1080p.mp4/chunk.m3u8",
