--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -12,14 +12,36 @@
 
 
 {
-     "name": "TruePremierFootball 1ID",
-     "image": "https://dookeela.live/uploads/1664499665.png",
-     "url": "https://playidtv24.vercel.app/stream/now/premier1.m3u8",
+     "name": "Astro Premier League",
+     "image": "https://dookeela2.live/uploads/1729384542.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=537&tv=AstroPremierLeague",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
      "playInNatPlayer": "true"
-    },
+ },
+
+
+{
+     "name": "Astro Premier League 2",
+     "image": "https://dookeela2.live/uploads/1729384502.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=536&tv=AstroPremierLeague2",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
+ },
+
+
+{
+     "name": "Astro Football",
+     "image": "https://dookeela2.live/uploads/1729384406.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=534&tv=AstroFootball",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
+ },
 
  
  
