--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -10,6 +10,17 @@
 
 
 
+{
+     "name": "Monomax 1",
+     "image": "https://dookeela2.live/uploads/1753517049.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=606&tv=Monomax1",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
+ },
+
+
 
 {
      "name": "Astro Premier League",
