--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -5,6 +5,30 @@
 "stations" : [
 
 {  
+name:"JUR-228 ยูริ ฮิโรเสะ",
+image:"https://fourhoi.com/jur-228-uncensored-leak/cover-n.jpg",
+url:"https://surrit.com/066997be-2923-4711-b7ff-44df6db58fe4/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
+name:"IPX-534 Kaede Karen",
+image:"https://fourhoi.com/ipx-534/cover-t.jpg",
+url:"https://surrit.com/d9365932-cf62-4e74-98e0-33259b1dc33d/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
+name:"ADN-698 ยูริ ฮิโรเสะ",
+image:"https://fourhoi.com/adn-698-uncensored-leak/cover-n.jpg",
+url:"https://surrit.com/54ab0856-d032-4bf5-a098-a1be9618ad7b/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
 name:"OFES-026 เม อิซึกะอิจิ",
 image:"https://fourhoi.com/ofes-026/cover-n.jpg",
 url:"https://surrit.com/16fe7482-3809-4789-b0cc-a5b514929542/720p/video.m3u8",
