--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -25,6 +25,16 @@
 {
      "name": "Astro Premier League",
      "image": "https://dookeela2.live/uploads/1729384542.png",
+     "url": "https://dkl-o53d.cdn.akamaiz.com/goalthcom_x5/astropremierleague/chunks.m3u8?nimblesessionid=49391956&wmsAuthSign=c2VydmVyX3RpbWU9Ny8zMC8yMDI1IDU6NTc6MzQgQU0maGFzaF92YWx1ZT00OXlWMHJwV09EOTJOTlNZeDk4aER3PT0mdmFsaWRtaW51dGVzPTIw",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
+ },
+
+{
+     "name": "Astro Premier Leaguet1",
+     "image": "https://dookeela2.live/uploads/1729384542.png",
      "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=537&tv=AstroPremierLeague",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
@@ -32,7 +42,32 @@
      "playInNatPlayer": "true"
  },
 
+{
+     "name": "Astro Premier Leaguet2",
+     "image": "https://dookeela2.live/uploads/1729384542.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=537&tv=AstroPremierLeague",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
+ },
+{
+     "name": "Astro Premier Leaguett2",
+     "image": "https://dookeela2.live/uploads/1729384542.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=537&tv=AstroPremierLeague",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
 
+ },
+{
+     "name": "Astro Premier Leaguet3",
+     "image": "https://dookeela2.live/uploads/1729384542.png",
+     "url": "https://dkl-o53d.cdn.akamaiz.com/goalthcom_x5/astropremierleague/chunks.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
+ },
 {
      "name": "Astro Premier League 2",
      "image": "https://dookeela2.live/uploads/1729384502.png",
