--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -21,6 +21,56 @@
  },
 
 
+{
+     "name": "Monomax 1(2)",
+     "image": "https://dookeela2.live/uploads/1753517049.png",
+     "url": "https://dkl-o53d.cdn.akamaiz.com/goalthcom_x5/monomax1/chunks.m3u8?nimblesessionid=49880616&wmsAuthSign=c2VydmVyX3RpbWU9Ny8zMS8yMDI1IDEwOjQ1OjQ0IEFNJmhhc2hfdmFsdWU9V3B5S2N4VG5ybWVXVmp6cWZsVXJpZz09JnZhbGlkbWludXRlcz0yMA==",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
+ },
+
+{
+     "name": "Monomax 3",
+     "image": "https://dookeela2.live/uploads/1753873776.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=607&tv=Monomax3%E0%B9%82%E0%B8%A1%E0%B9%82%E0%B8%99%E0%B9%81%E0%B8%A1%E0%B8%81%E0%B8%8B%E0%B9%8C3",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
+ },
+
+{
+     "name": "Monomax 3(1)",
+     "image": "https://dookeela2.live/uploads/1753873776.png",
+     "url": "https://dkl-o53d.cdn.akamaiz.com/goalthcom_x5/ais-monomax-3/playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9Ny8zMS8yMDI1IDEwOjQ5OjUwIEFNJmhhc2hfdmFsdWU9aDhGR0lmN29nbXIyTmVXQis4eko4UT09JnZhbGlkbWludXRlcz0yMA==",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
+ },
+
+{
+     "name": "Monomax 4",
+     "image": "https://dookeela2.live/uploads/1753873817.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=608&tv=Monomax4%E0%B9%82%E0%B8%A1%E0%B9%82%E0%B8%99%E0%B9%81%E0%B8%A1%E0%B8%81%E0%B8%8B%E0%B9%8C4",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
+ },
+
+{
+     "name": "Monomax 4(1)",
+     "image": "https://dookeela2.live/uploads/1753873817.png",
+     "url": "https://dkl-o53d.cdn.akamaiz.com/goalthcom_x5/ais-monomax-4/playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9Ny8zMS8yMDI1IDEwOjQ1OjQ4IEFNJmhhc2hfdmFsdWU9UFU1M1hqL3YxL3lkREFvVW9rV1gzUT09JnZhbGlkbWludXRlcz0yMA==",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
+ },
+
 
 {
      "name": "Astro Premier League",
@@ -33,7 +83,7 @@
  },
 
 {
-     "name": "Astro Premier Leaguet1",
+     "name": "Astro Premier Leaguet(1)",
      "image": "https://dookeela2.live/uploads/1729384542.png",
      "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=537&tv=AstroPremierLeague",
      "referer": "https://freetvdd.com",
@@ -42,37 +92,21 @@
      "playInNatPlayer": "true"
  },
 
-{
-     "name": "Astro Premier Leaguet2",
-     "image": "https://dookeela2.live/uploads/1729384542.png",
-     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=537&tv=AstroPremierLeague",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
-     "playInNatPlayer": "true"
- },
-{
-     "name": "Astro Premier Leaguett2",
-     "image": "https://dookeela2.live/uploads/1729384542.png",
-     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=537&tv=AstroPremierLeague",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
-     "playInNatPlayer": "true"
- },
-{
-     "name": "Astro Premier Leaguet3",
-     "image": "https://dookeela2.live/uploads/1729384542.png",
-     "url": "https://dkl-o53d.cdn.akamaiz.com/goalthcom_x5/astropremierleague/chunks.m3u8",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
-     "playInNatPlayer": "true"
- },
+
 {
      "name": "Astro Premier League 2",
      "image": "https://dookeela2.live/uploads/1729384502.png",
      "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=536&tv=AstroPremierLeague2",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
+ },
+
+{
+     "name": "Astro Premier League 2 (2)",
+     "image": "https://dookeela2.live/uploads/1729384502.png",
+     "url": "https://dkl-o53d.cdn.akamaiz.com/goalthcom_x5/astropremierleague2/chunks.m3u8?nimblesessionid=49879896&wmsAuthSign=c2VydmVyX3RpbWU9Ny8zMS8yMDI1IDEwOjQzOjMyIEFNJmhhc2hfdmFsdWU9OXBjYVh2UjQ5QlAyNi9RWTh3c0lnUT09JnZhbGlkbWludXRlcz0yMA==",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
@@ -90,6 +124,16 @@
      "playInNatPlayer": "true"
  },
 
+
+{
+     "name": "Astro Football(2)",
+     "image": "https://dookeela2.live/uploads/1729384406.png",
+     "url": "https://dkl-o53d.cdn.akamaiz.com/goalthcom_x5/astrofootball/chunks.m3u8?nimblesessionid=49880194&wmsAuthSign=c2VydmVyX3RpbWU9Ny8zMS8yMDI1IDEwOjQ0OjM0IEFNJmhhc2hfdmFsdWU9NHkvZmZHdnUxTUxaNUxuKzdhelh5UT09JnZhbGlkbWludXRlcz0yMA==",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
+ },
  
  
 {  
