--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -9,6 +9,23 @@
 
 
 
+
+{  
+name:"คู่เดือด...แสบเกินพิกัด (2002)",
+image:"https://img.fw4free.com/postor/20190425064544bad-company-5485ef17b226d.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Bad_Company_2002/Bad_Company_2002_TH_1080p.m4v/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},  
+
+
+
+
+
+
+
+
   
 {  
 name:"Jurassic World Rebirth จูราสสิค เวิลด์: กำเนิดชีวิตใหม่ (2025)",
