--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -10,59 +10,116 @@
 
 
 
-{
-     "name": "Monomax 1",
-     "image": "https://dookeela2.live/uploads/1753517049.png",
-     "url": "https://dkl-o53d.cdn.akamaiz.com/goalthcom_x5/monomax1/chunks.m3u8?nimblesessionid=49880616&wmsAuthSign=c2VydmVyX3RpbWU9Ny8zMS8yMDI1IDEwOjQ1OjQ0IEFNJmhhc2hfdmFsdWU9V3B5S2N4VG5ybWVXVmp6cWZsVXJpZz09JnZhbGlkbWludXRlcz0yMA==",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
-     "playInNatPlayer": "true"
- },
-
+{ 
+"name": "MonoMax Sports", 
+"image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRIhwCkiStDcZU4KbFreFFtdDux_5yrPZ97GQ&s", 
+"url": "https://dookeela.live/live-tv/dklsport1", "referer": "https://dookeela.live/", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36" 
+},
 
 {
-     "name": "Monomax 3",
-     "image": "https://dookeela2.live/uploads/1753873776.png",
-     "url": "https://dkl-o53d.cdn.akamaiz.com/goalthcom_x5/ais-monomax-3/playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9Ny8zMS8yMDI1IDEwOjQ5OjUwIEFNJmhhc2hfdmFsdWU9aDhGR0lmN29nbXIyTmVXQis4eko4UT09JnZhbGlkbWludXRlcz0yMA==",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
-     "playInNatPlayer": "true"
- },
+"name":"Monomax Sport-3", 
+"image":"https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0", 
+"url": "https://cdnsv1.bunnycdncloud.com/andaman888th/dxsport1/th-sport/dxsport1/chunks.m3u8?nimblesessionid=25585411", 
+"referer": "https://www.andaman888th.net/", 
+"playInNatPlayer":"true"
+},
+
+{ 
+"name": "MonoMax 1", 
+"image": "https://dookeela.live/uploads/1753517049.png", 
+"url": "https://dookeela.live/live-tv/monomax1", 
+"referer": "https://dookeela.live/", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36" 
+},
 
 
-{
-     "name": "Monomax 4",
-     "image": "https://dookeela2.live/uploads/1753873817.png",
-     "url": "https://dkl-o53d.cdn.akamaiz.com/goalthcom_x5/ais-monomax-4/playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9Ny8zMS8yMDI1IDEwOjQ1OjQ4IEFNJmhhc2hfdmFsdWU9UFU1M1hqL3YxL3lkREFvVW9rV1gzUT09JnZhbGlkbWludXRlcz0yMA==",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
-     "playInNatPlayer": "true"
- },
+{ "name": "MonoMax 2", 
+"image": "https://dookeela.live/uploads/1753517049.png", 
+"url": "https://dookeela.live/live-tv/monomax2", 
+"referer": "https://dookeela.live/", "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36" 
+},
 
-
-{
-     "name": "Astro Premier League",
-     "image": "https://dookeela2.live/uploads/1729384542.png",
-     "url": "https://dkl-o53d.cdn.akamaiz.com/goalthcom_x5/astropremierleague/chunks.m3u8?nimblesessionid=49884661&wmsAuthSign=c2VydmVyX3RpbWU9Ny8zMS8yMDI1IDEwOjU5OjQwIEFNJmhhc2hfdmFsdWU9U3J3TUtXMVNoZEE2anVGbyswZXBxQT09JnZhbGlkbWludXRlcz0yMA==",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
-     "playInNatPlayer": "true"
- },
-
+{ 
+"name": "MonoMax 1", 
+"image": "https://dookeela.live/uploads/1753517049.png", 
+"url": "https://168dooball.io/live-stream/?mode=ball&ch=monomax3&lid=1022&mid=155927", 
+"referer": "https://168dooball.io/live-stream/?mode=ball&ch=monomax3&lid=1022&mid=155927", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36" 
+},
 
 {
-     "name": "Astro Premier League 2",
-     "image": "https://dookeela2.live/uploads/1729384502.png",
-     "url": "https://dkl-o53d.cdn.akamaiz.com/goalthcom_x5/astropremierleague2/chunks.m3u8?nimblesessionid=49884999&wmsAuthSign=c2VydmVyX3RpbWU9Ny8zMS8yMDI1IDExOjAwOjM5IEFNJmhhc2hfdmFsdWU9dmtMWmNnUXFDYVphblJGclExWGdPQT09JnZhbGlkbWludXRlcz0yMA==",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
-     "playInNatPlayer": "true"
- },
+"name": "Monomax Sport-1",
+"image": "https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0",
+"url": "https://freelive2.inwstream.com:1936/freelive-edge/fwsport_fw-iptv.stream/playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9My8yMi8yMDI1IDM6NDY6MDEgQU0maGFzaF92YWx1ZT1ZK2c4UVJ6ajIvRDhaaThOZ1lkYkdRPT0mdmFsaWRtaW51dGVzPTI=", 
+"referer": "https://fw4free.com/",
+"info":"",
+"playInNatPlayer": "true"
+}, 
+{
+"name":"Monomax Sport-2", 
+"image":"https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0", 
+"url": "https://slave02.appball.vip/hls/ch11.m3u8", 
+"playInNatPlayer":"true"
+},  
+{
+"name":"Monomax Sport-4", 
+"image":"https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0", 
+"url": "https://cdn1.googlecdn.live/4k/dklsport1/chunks.m3u8", 
+"referer": "https://footballsod.live/", 
+"playInNatPlayer": "true"
+}, 
+{
+"name":"Monomax Sport-5", 
+"image":"https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0", 
+"url": "https://168dooball.net/live-stream/?mode=ball&ch=monomax1", 
+"playInNatPlayer":"true"
+}, 
+{
+"name":"Monomax Sport-6", 
+"image":"https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0", 
+"url": "https://www.ball24.tv/allchannel/?id=monomax1", 
+"userAgent":"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36", 
+"info": "มือถือ", "playInNatPlayer":"true"
+}, 
+{
+"name":"Monomax Sport-7", 
+"image":"https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0", 
+"url": "https://www.ball24.tv/allchannel/?id=monomax2", 
+"playInNatPlayer":"true"
+}, 
+{
+"name":"Monomax Sport-8", 
+"image":"https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0", 
+"url": "https://168dooball.net/live-stream/?mode=ball&ch=monomax2", 
+"playInNatPlayer":"true"
+}, 
+{
+"name":"Monomax Sport-8", 
+"image":"https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0", 
+"url": "https://r3-sn-5fo-c37ed15.googleuservideo.com/168db_e1/monomax3_480p/playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9OC8zLzIwMjUgNjo0MzowNiBQTSZoYXNoX3ZhbHVlPWttNmwvVnVwcEhHTzNZa3VIcGtOa1E9PSZ2YWxpZG1pbnV0ZXM9MSZzdHJtX2xlbj0yMiZpZD1iZ2hyNzY3MDc5", 
+"playInNatPlayer":"true"
+}, 
+{
+"name":"Monomax Sport-8", 
+"image":"https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0", 
+"url": "https://www.baan-ball.com/live/watch/31467", 
+"referer": "https://www.baan-ball.com/live/watch/31467", 
+"embed":"true"
+}, 
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 {
@@ -93,3 +150,4 @@
 
 ]
 }
+
