--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -13,41 +13,18 @@
 
 { 
 "name": "MonoMax 1", 
-"image": "https://dookeela.live/uploads/1753517049.png", 
+"image": "https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0", 
 "url": "https://cdn2.aws-live-streaming.com/lsmscore/monomax1/chunks.m3u8", 
 "referer": "https://99dooball.com/", 
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36" 
 },
 
 
-{ "name": "MonoMax 2", 
-"image": "https://dookeela.live/uploads/1753517049.png", 
-"url": "https://dookeela.live/live-tv/monomax2", 
-"referer": "https://dookeela.live/", "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36" 
-},
-
-{ 
-"name": "MonoMax 1", 
-"image": "https://dookeela.live/uploads/1753517049.png", 
-"url": "https://168dooball.io/live-stream/?mode=ball&ch=monomax3&lid=1022&mid=155927", 
-"referer": "https://168dooball.io/live-stream/?mode=ball&ch=monomax3&lid=1022&mid=155927", 
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36" 
-},
 
 {
-"name": "Monomax Sport-1",
+"name": "Monomax Sport2",
 "image": "https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0",
-"url": "https://freelive2.inwstream.com:1936/freelive-edge/fwsport_fw-iptv.stream/playlist.m3u8", 
-"referer": "https://fw4free.com/",
-"info":"",
-"playInNatPlayer": "true"
-}, 
-
-
-{
-"name": "Monomax Sport-1T",
-"image": "https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0",
-"url": "https://freelive2.inwstream.com:1936/freelive-edge/fwsport_fw-iptv.stream/chunks.m3u8", 
+"url": "https://cdn2.aws-live-streaming.com/lsmscore/monomax-2/chunks.m3u8", 
 "referer": "https://fw4free.com/",
 "info":"",
 "playInNatPlayer": "true"
@@ -71,5 +48,6 @@
 
 ]
 }
+
 
 
