--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -13,7 +13,7 @@
 
 { 
 "name": "MonoMax 1", 
-"image": "https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0", 
+"image": "https://dookeela.live/uploads/1753517049.png", 
 "url": "https://cdn2.aws-live-streaming.com/lsmscore/monomax1/chunks.m3u8", 
 "referer": "https://99dooball.com/", 
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36" 
@@ -21,10 +21,22 @@
 
 
 
+
+
 {
-"name": "Monomax Sport2",
+"name": "Monomax Sport-1",
 "image": "https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0",
-"url": "https://cdn2.aws-live-streaming.com/lsmscore/monomax-2/chunks.m3u8", 
+"url": "https://freelive2.inwstream.com:1936/freelive-edge/fwsport_fw-iptv.stream/playlist.m3u8", 
+"referer": "https://fw4free.com/",
+"info":"",
+"playInNatPlayer": "true"
+}, 
+
+
+{
+"name": "Monomax Sport-1T",
+"image": "https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0",
+"url": "https://freelive2.inwstream.com:1936/freelive-edge/fwsport_fw-iptv.stream/chunks.m3u8", 
 "referer": "https://fw4free.com/",
 "info":"",
 "playInNatPlayer": "true"
