--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -5,6 +5,14 @@
 "stations" : [
 
 {  
+name:"MIDA-278 Arina (อารินะ ฮาชิโมโตะ)",
+image:"https://fourhoi.com/mida-278/cover-n.jpg",
+url:"https://surrit.com/7895a58b-9f1b-4b19-8377-6bccd29821f5/720p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
 name:"IPZZ-629 สึมุกิ อาคาริ",
 image:"https://fourhoi.com/ipzz-629-uncensored-leak/cover-n.jpg",
 url:"https://surrit.com/a9d7cebf-78de-4018-9a29-838efad71135/1080p/video.m3u8",
