--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -5,6 +5,22 @@
 "stations" : [
 
 {  
+name:"PRED-804 ชิรามิเนะ มิอุ",
+image:"https://fourhoi.com/pred-804/cover-n.jpg",
+url:"https://surrit.com/682b5f38-b4c9-413f-89f2-f6ed418cf100/720p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
+name:"PRED-795 อาคาริ สึมุงิ",
+image:"https://fourhoi.com/pred-795/cover-n.jpg",
+url:"https://surrit.com/d66b67e2-6f88-4bb9-a1e8-7b50444e64a5/720p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
 name:"MIDA-278 Arina (อารินะ ฮาชิโมโตะ)",
 image:"https://fourhoi.com/mida-278/cover-n.jpg",
 url:"https://surrit.com/7895a58b-9f1b-4b19-8377-6bccd29821f5/720p/video.m3u8",
